# Automatic_compression_of_CNN

./: README.md  README_en.md
Android_app/: settings.gradle.kts
Android_app/app/: build.gradle.kts
NCNN_Compression/: .gitignore  VisDrone_Model.py  main.py  pytest.ini  requirements.txt  run_prog.txt  show_results.py
NCNN_Compression/android_native/: CMakeLists.txt  build_android.sh  yolo_detect.cpp
NCNN_Compression/assets/: lut_sample.json
NCNN_Compression/configs/: config_yolo11m_p09_30x_staged_tflite_android.yaml  config_yolo26m_p09_30x_staged_tflite_android.yaml  config_yolov8m_p08_30x_staged_tflite_android.yaml
NCNN_Compression/standalone_yolov8n_ncnn_int8/: README.md  quantize_yolov8n_ncnn_int8.py  requirements.txt  setup_and_run.ps1
NCNN_Compression/tests/: README.md  conftest.py
NCNN_Compression/tests/integration/: test_benchmark_cache_integration.py  test_orchestrator_extended.py  test_orchestrator_pipeline.py  test_results_history_integration.py
NCNN_Compression/tests/smoke/: test_fake_pipeline_smoke.py
NCNN_Compression/tests/unit/: test_android_bench_helpers.py  test_android_dataset.py  test_android_runtime_wrappers.py  test_android_tflite_bench.py  test_bench_cache.py  test_config.py  test_kd_finetune_extended.py  test_latency_lut.py  test_latency_lut_extended.py  test_ncnn.py  test_ncnn_extended.py  test_pareto.py  test_quant_helpers.py  test_quant_ptq_and_calib.py  test_rebench_existing_extended.py  test_results_extended.py  test_runtime_backend.py  test_search.py  test_search_extended.py  test_slim_helpers.py  test_staged_pruning.py  test_trim_extended.py  test_trim_ops.py  test_ultralytics_io_extended.py  test_utils_exporter.py  test_yolo_pruning_helpers.py
NCNN_Compression/tools/: android_ci_rebench_raw.py  bench_tflite_fp32_baselines.py  show_results.py  validate_tflite_fp16_candidates.py
NCNN_Compression/xtrim/: __init__.py  android_app_bench.py  android_dataset.py  android_ort_bench.py  android_tflite_bench.py  bench_cache.py  config.py  config.yaml  config2.yaml  config3.yaml  config_yolo11m_extreme_30x.yaml  config_yolo26m_extreme_30x.yaml  config_yolov8m_13x_compr.yaml  config_yolov8m_p08_30x_staged.yaml  exporter.py  latency_lut.py  ncnn.py  orchestrator.py  pareto.py  rebench_existing.py  results_table.py  runtime_backend.py  search.py  types.py  utils.py
NCNN_Compression/xtrim/android/: __init__.py  adb_demo.py
NCNN_Compression/xtrim/quant/: __init__.py  calib.py  (+2 more)
TestYolo/: .gitignore  settings.gradle.kts
TestYolo/app/: build.gradle.kts
TestYolo/app/src/main/cpp/: CMakeLists.txt  classifier.cpp  classifier_jni.cpp  fastcnn_jni.cpp  fastercnn.cpp  yolo_jni.cpp  yolov11seg.cpp  yolov11seg.hpp  yolov11seg_jni.cpp  yolov8.cpp  yolov8.hpp
TestYolo/gradle/: libs.versions.toml
TestYolo/scripts/: optimize_yolo_ncnn.py
app/scripts/: apply_hardswish.bat
(+62 files in other folders)
